# hacktyper

./: CHANGELOG.md  Cargo.toml  Cross.toml  INSTALL.md  LICENSE  README.md  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml  test-install-scripts.yml
src/: config.rs  main.rs
